fix dark mode link color

--- a/res/style.css
+++ b/res/style.css
@@ -120,7 +120,6 @@ pre {
 }
 
 a, a:link, a:visited {
-    color: #235aff;
     transition-duration: 0.2s;
 }
 
